fix: menu drawer off-screen smoothly

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -123,7 +123,7 @@ body {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    transform: translateX(1.5rem);
+    transform: translateX(100%);
     transition: transform 200ms;
   }
 
